--- a/arch/arm64/boot/dts/qcom/curtana-atoll-idp-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/curtana-atoll-idp-overlay.dts
@@ -17,14 +17,14 @@
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
 #include "atoll-idp.dtsi"
-#include "atoll-audio-overlay.dtsi"
-#include "atoll-camera-sensor-idp.dtsi"
+#include "atoll-wcd937x-idp-audio-overlay.dtsi"
+#include "curtana-atoll-camera-sensor-idp.dtsi"
 
 / {
-	model = "IDP";
+	model = "wcd937x Audio Codec IDP CURTANA";
 	compatible = "qcom,atoll-idp", "qcom,atoll", "qcom,idp";
 	qcom,msm-id = <407 0x0>;
-	qcom,board-id = <34 0>;
+	qcom,board-id = <0x20022 1>;
 };
 
 &dsi_ft8756_huaxing_video {
@@ -35,4 +35,21 @@
 };
 &sdhc_2 {
 	cd-gpios = <&tlmm 69 0>;
+};
+
+&pm6150_charger {
+	qcom,fv-max-uv = <4480000>;
+	qcom,fcc-max-ua = <3600000>;
+	qcom,thermal-mitigation = <3600000 3300000 3000000 2500000 2000000 1500000 1000000 800000 500000 100000>;
+	mi,support-ffc;
+};
+&smb1396_div2_cp_master {
+	mi,qc3p5-ffc-batt;
+ };
+
+&pm6150_pdphy {
+	mi,pd_curr_limit = <1>;
+	mi,pd_max_curr_limit = <4000000>;
+	mi,limit_pd_vbus = <1>;
+	mi,pd_vbus_max_limit = <9500000>;
 };
