--- a/arch/arm64/boot/dts/qcom/durandal-atoll-ab-idp-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/durandal-atoll-ab-idp-overlay.dts
@@ -17,14 +17,14 @@
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
 #include "atoll-idp.dtsi"
-#include "atoll-audio-overlay.dtsi"
-#include "atoll-camera-sensor-idp.dtsi"
+#include "atoll-wcd937x-idp-audio-overlay.dtsi"
+#include "durandal-atoll-camera-sensor-idp.dtsi"
 
 / {
-	model = "IDP";
-	compatible = "qcom,atoll-idp", "qcom,atoll", "qcom,idp";
-	qcom,msm-id = <407 0x0>;
-	qcom,board-id = <34 0>;
+	model = "wcd937x Audio Codec AB IDP DURANDAL";
+	compatible = "qcom,atoll-ab-idp", "qcom,atoll-ab", "qcom,idp";
+	qcom,msm-id = <443 0x0>;
+	qcom,board-id = <0x30022 1>;
 };
 
 &dsi_ft8756_huaxing_video {
@@ -35,4 +35,21 @@
 };
 &sdhc_2 {
 	cd-gpios = <&tlmm 69 0>;
+};
+
+&pm6150_charger {
+	qcom,fv-max-uv = <4480000>;
+	qcom,fcc-max-ua = <3600000>;
+	qcom,thermal-mitigation = <3600000 3300000 3000000 2500000 2000000 1500000 1000000 800000 500000 100000>;
+	mi,support-ffc;
+};
+
+&smb1396_div2_cp_master {
+	mi,qc3p5-ffc-batt;
+ };
+
+&tx_swr_gpios {
+	qcom,chip-wakeup-reg = <0x01FFB000>;
+	qcom,chip-wakeup-maskbit = <0>;
+	qcom,chip-wakeup-default-val = <0x1>;
 };
