--- a/arch/arm64/boot/dts/qcom/gram-atoll-ab-idp-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/gram-atoll-ab-idp-overlay.dts
@@ -17,14 +17,15 @@
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
 #include "atoll-idp.dtsi"
-#include "atoll-audio-overlay.dtsi"
-#include "atoll-camera-sensor-idp.dtsi"
+#include "atoll-wcd937x-idp-audio-overlay.dtsi"
+#include "gram-atoll-camera-sensor-idp.dtsi"
+#include "j6b-charge-overlay.dtsi"
 
 / {
-	model = "IDP";
-	compatible = "qcom,atoll-idp", "qcom,atoll", "qcom,idp";
-	qcom,msm-id = <407 0x0>;
-	qcom,board-id = <34 0>;
+	model = "wcd937x Audio Codec AB IDP GRAM";
+	compatible = "qcom,atoll-ab-idp", "qcom,atoll-ab", "qcom,idp";
+	qcom,msm-id = <443 0x0>;
+	qcom,board-id = <0x60022 1>;
 };
 
 &dsi_ft8756_huaxing_video {
@@ -35,4 +36,10 @@
 };
 &sdhc_2 {
 	cd-gpios = <&tlmm 69 0>;
+};
+
+&tx_swr_gpios {
+	qcom,chip-wakeup-reg = <0x01FFB000>;
+	qcom,chip-wakeup-maskbit = <0>;
+	qcom,chip-wakeup-default-val = <0x1>;
 };
